--- a/casella.html
+++ b/casella.html
@@ -149,7 +149,7 @@
                             
                             <img class="img-fluid" src="img/Sound Level Meter1.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/categories/noisemonitoring1.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -163,7 +163,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Sampling Pump.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/uk/en/products/apex2-standard.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -177,7 +177,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Personal Noise Dosimeter.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://casellasolutions.com/uk/en/products/dbadge2-standard-single-kit.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -191,7 +191,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Fixed (Sound –Dust ).jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/categories/boundarymonitoring1.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
