--- a/davisproducts.html
+++ b/davisproducts.html
@@ -127,7 +127,7 @@
                             
                             <img class="img-fluid" src="img/71wSg--3Q4L._AC_UF1000,1000_QL80_.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.davisinstruments.com/pages/weather-stations" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
