--- a/Chemetricsproducts.html
+++ b/Chemetricsproducts.html
@@ -127,7 +127,7 @@
                                 
                                 <img class="img-fluid" src="img/Multi-Analyte Photometers.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.chemetrics.com/product/v-2000-multi-analyte-photometer-for-water-quality-analysis/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -141,7 +141,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/SAM Single Analyte Meters.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.chemetrics.com/sam-single-analyte-meters/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -155,7 +155,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/K-60022.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.chemetrics.com/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
