--- a/Kester.html
+++ b/Kester.html
@@ -148,7 +148,7 @@
                             
                             <img class="img-fluid" src="img/Weather Meter.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://kestrelmeters.com/#:~:text=About%20Kestrel%20Weather%20Meters&text=Hand%20held%20wind%20and%20weather,humidity%20and%20heat%20stress%20information." class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -162,7 +162,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Weather Stations123.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://kestrelinstruments.com/kestrelmet-weather-stations" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -176,7 +176,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Heat Stress Tracker.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://kestrelinstruments.com/kestrel-5400-heat-stress-tracker" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
