--- a/aeroqaul.html
+++ b/aeroqaul.html
@@ -147,7 +147,7 @@
                             
                             <img class="img-fluid" src="img/Portable Air Quality Monitor.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.aeroqual.com/products/s-series-portable-air-monitors/series-500-portable-air-pollution-monitor" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -161,7 +161,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Portable Dust Monitor.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.aeroqual.com/products/ranger-portable-air-monitor/ranger-portable-dust-monitor" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -175,7 +175,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/aeroqual-aqm-65-with-integrated-calibration.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.aeroqual.com/products/aqm-stations/aqm-65-air-quality-monitoring-station" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -189,7 +189,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Dust Sentry.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.aeroqual.com/particulate-dust-monitors/dust-sentry" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
