--- a/casellaproducts.html
+++ b/casellaproducts.html
@@ -129,7 +129,7 @@
                             
                             <img class="img-fluid" src="img/Sound Level Meter1.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/categories/noisemonitoring1.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -143,7 +143,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Sampling Pump.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/uk/en/products/apex2-standard.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -157,7 +157,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Personal Noise Dosimeter.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://casellasolutions.com/uk/en/products/dbadge2-standard-single-kit.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -172,7 +172,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Dust Meter.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/uk/en/products/cel-712-microdust-pro-kit.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -187,7 +187,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Fixed (Sound –Dust ).jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/categories/boundarymonitoring1.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -202,7 +202,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Vibration Meter1.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/categories/vibrationmonitoring1.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -216,7 +216,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Sampling Accessory.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.casellasolutions.com/uk/en/products/by-product/air-sampling-media/apex2/accessories.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
