--- a/criticalproducts.html
+++ b/criticalproducts.html
@@ -128,7 +128,7 @@
                                 
                                 <img class="img-fluid" src="img/indoor air quality monitor.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.critical-environment.com/products/indoor-air-quality-monitors" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -142,7 +142,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/MixCollage-05-Feb-2024-01-14-PM-7930.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.critical-environment.com/products/gas-detectors" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
