--- a/ecom.html
+++ b/ecom.html
@@ -149,7 +149,7 @@
                             
                             <img class="img-fluid" src="img/Portable Flue Gas Analyzer.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ecom.de/en/productcats/abgasanalyse/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -163,7 +163,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Fixed Continues Gas Analyzer.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://ecomusa.com/ecom-products/ecom-rack/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -177,7 +177,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Recording.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ecom.de/en/productcats/pressure-measurement/" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
