--- a/gigahertz.html
+++ b/gigahertz.html
@@ -149,7 +149,7 @@
                             
                             <img class="img-fluid" src="img/MixCollage-05-Feb-2024-03-15-PM-6845.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://gigahertz-solutions.com/Measurement/High-Frequency" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -163,7 +163,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/MixCollage-05-Feb-2024-03-18-PM-6000.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://gigahertz-solutions.com/Measurement/Low-Frequency" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
