--- a/kitagawaproducts.html
+++ b/kitagawaproducts.html
@@ -127,7 +127,7 @@
                                 
                                 <img class="img-fluid" src="img/Gas Detector Tube.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.komyokk.co.jp/en/product/001/index.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -141,7 +141,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/Single-Gas Monitors.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.komyokk.co.jp/en/product/002/index.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -155,7 +155,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/Multi-Gas Monitors.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.komyokk.co.jp/en/product/002/index.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -169,7 +169,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/Gas Alarm Meters.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.komyokk.co.jp/en/product/003/index.html" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
