--- a/lovibond.html
+++ b/lovibond.html
@@ -148,7 +148,7 @@
                             
                             <img class="img-fluid" src="img/xd7500_mb2_04.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.lovibond.com/en/PW/Water-Testing/Products/Lab-Portable-Instruments/XD-Spectrophotometers" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -162,7 +162,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/codsetup_md200_mb2_01.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.lovibond.com/en/PW/Water-Testing/Products/Lab-Portable-Instruments/ColorimetersPhotometers/COD-Set-Ups" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -176,7 +176,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/md100_cod_mb2_01.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.lovibond.com/en/PW/Water-Testing/Products/Lab-Portable-Instruments/ColorimetersPhotometers" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -190,7 +190,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/sd150_case_mb2_01.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.lovibond.com/en/PW/Water-Testing/Products/Lab-Portable-Instruments/Electrochemistry/Portable-Hand-held-Meters" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
