--- a/senkoproducts.html
+++ b/senkoproducts.html
@@ -127,7 +127,7 @@
                                 
                                 <img class="img-fluid" src="img/SGT.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senko-detection.com/sgt" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -141,7 +141,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/MGT.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senko-detection.com/mgt" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -155,7 +155,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/MGT-Pump.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senkoeu.com/products" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -169,7 +169,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/iGas.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senko-detection.com/igasdetector" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -183,7 +183,7 @@
                             <div class="overflow-hidden">
                                 <img class="img-fluid" src="img/SP Secure Detector.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senkoeu.com/products" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
@@ -198,7 +198,7 @@
                                 
                                 <img class="img-fluid" src="img/MixCollage-05-Feb-2024-02-09-PM-5679.jpg" alt="">
                                 <div class="hover-content text-center">
-                                    <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                    <a href="https://www.senkoeu.com/products" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                                 </div>
                             </div>
                             <div class="team-text bg-light text-center p-4">
