--- a/tenproducts.html
+++ b/tenproducts.html
@@ -129,7 +129,7 @@
                             
                             <img class="img-fluid" src="img/Diesel smoke meter.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ten-automotive.nl/ten-aem-particle-counter" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -143,7 +143,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/innova-500-2.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ten-automotive.nl/gas-analysers" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -157,7 +157,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Zero Emission.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ten-automotive.nl/zero-emission-unit" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -171,7 +171,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Multigas analyzer.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ten-automotive.nl/gas-analysers" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
@@ -185,7 +185,7 @@
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/Brake tester.jpg" alt="">
                             <div class="hover-content text-center">
-                                <a href="" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+                                <a href="https://www.ten-automotive.nl/pti" class="btn btn-sm text-light p-0" style="border: 3px solid #007bff; padding: 5px 10px;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
